--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-modal": "^3.14.3",
+    "react-rating": "^2.0.5",
+    "react-rating-stars-component": "^2.2.0",
     "react-scripts": "4.0.3",
     "react-simple-star-rating": "^3.0.0",
     "semantic-ui-css": "^2.4.1",
