--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-modal": "^3.14.3",
     "react-rating": "^2.0.5",
     "react-rating-stars-component": "^2.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-simple-star-rating": "^3.0.0",
     "semantic-ui-css": "^2.4.1",
